name:
  record-aeson
version:
  0.1.0.0
synopsis:
  Instances of "aeson" classes for the "record" types
category:
  Data, JSON, Record
homepage:
  https://github.com/nikita-volkov/record-aeson
bug-reports:
  https://github.com/nikita-volkov/record-aeson/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/record-aeson.git


library
  hs-source-dirs:
    library
  other-modules:
    Record.Aeson.TH
  exposed-modules:
    Record.Aeson
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators
  default-language:
    Haskell2010
  build-depends:
    template-haskell == 2.*,
    aeson == 0.8.*,
    record == 0.3.*,
    base-prelude >= 0.1.19 && < 0.2,
    base >= 4.6 && < 5
